13 December 2016: Wouter
	- Fix #1182: Fix Resource leak (socket), at startup.

9 December 2016: Wouter
	- Fix #1176: stack size too small for Alpine Linux.

8 December 2016: Wouter
	- Fix downcast warnings from visual studio in sldns code.
	- tag 1.6.0rc1

7 December 2016: Ralph
	- Add DSA support for OpenSSL 1.1.0
	- Fix remote control without cert for LibreSSL

6 December 2016: George
	- Added generic EDNS code for registering known EDNS option codes,
	  bypassing the cache response stage and uniquifying mesh states. Four EDNS
	  option lists were added to module_qstate (module_qstate.edns_opts_*) to
	  store EDNS options from/to front/back side.
	- Added two flags to module_qstate (no_cache_lookup, no_cache_store) that
	  control the modules' cache interactions.
	- Added code for registering inplace callback functions. The registered
	  functions can be called just before replying with local data or Chaos,
	  replying from cache, replying with SERVFAIL, replying with a resolved
	  query, sending a query to a nameserver. The functions can inspect the
	  available data and maybe change response/query related data (i.e. append
	  EDNS options).
	- Updated Python module for the above.
	- Updated Python documentation.

5 December 2016: Ralph
	- Fix #1173: differ local-zone type deny from unset
	  tag_actions element.

5 December 2016: Wouter
	- Fix #1170: document that 'inform' local-zone uses local-data.

1 December 2016: Ralph
	- hyphen as minus fix, by Andreas Schulze

30 November 2016: Ralph
	- Added local-zones and local-data bulk addition and removal
	  functionality in unbound-control (local_zones, local_zones_remove,
	  local_datas and local_datas_remove).
	- iana portlist update

29 November 2016: Wouter
	- version 1.6.0 is in the development branch.
	- braces in view.c around lock statements.

28 November 2016: Wouter
	- new install-sh.

25 November 2016: Wouter
	- Fix that with openssl 1.1 control-use-cert: no uses less cpu, by