@@ -1,5 +1,6 @@
 13 December 2016: Wouter
 	- Fix #1182: Fix Resource leak (socket), at startup.
+	- Fix unbound-control and ipv6 only.
 
 9 December 2016: Wouter
 	- Fix #1176: stack size too small for Alpine Linux.
